--- a/app/partials/games/turn.html
+++ b/app/partials/games/turn.html
@@ -1,14 +1,12 @@
 <div>
   <h1>Turn around</h1>
-  <table>
-    <tr ng-repeat="player in players">
-      <td>
-        <span class="finishingLine">&nbsp;</span>
-        <img ng-src="{{player.imageUrl}}" class="face"
-             style="margin-left: {{(gameData[player.$id]||0)*20}}px;
-                    transform: rotate({{gameData[player.$id]*15}}deg);
-                    transition: all 0.5s;"/>
-      </td>
-    </tr>
-  </table>
+
+  <div class="row-players">
+    <div ng-repeat="player in players" class="row-player">
+      <img ng-src="{{player.imageUrl}}"
+            class="face huge"
+            style="transform: rotate({{gameData[player.$id]*180}}deg);
+                  transition: all 1s;"/>
+    </div>
+  </div>
 </div>
