--- a/app/css/app.css
+++ b/app/css/app.css
@@ -43,11 +43,14 @@ a {
   border-radius: 100%;
   border: 1px solid #ddd;
   width: 48px;
-  margin: 16px;
+  margin: 32px;
 }
 .face.med {
   width: 75px;
 }
 .face.big {
   width: 96px;
+}
+.face.huge {
+  width: 200px;
 }
