Potato: lose life when swiping without potato

--- a/app/partials/games/swipe.html
+++ b/app/partials/games/swipe.html
@@ -6,7 +6,7 @@
     <tr>
       <td ng-repeat="player in players" height="350px">
         <div style="height: {{life[$index]*4}}px; width: 40px; transition: all 0.1s;
-                    background-color: {{color(life[$index])}}"></div>
+                    background-color: {{potatoColor(life[$index])}}"></div>
       </td>
     </tr>
     <tr>
