--- a/app/css/game.css
+++ b/app/css/game.css
@@ -143,3 +143,21 @@
   border-style: solid;
   border-width: 0;
 }
+
+.player-line-row {
+  border-right: 4px dotted black;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+}
+
+.player-line-row .face {
+
+}
+
+.player-line-row .finishing-line {
+  background-color: black;
+  width: 4px;
+  height: 20px;
+  display: block;
+}
