--- a/app/partials/games/tap.html
+++ b/app/partials/games/tap.html
@@ -2,7 +2,7 @@
   <h1>Tap your screen</h1>
     <div ng-repeat="player in players" class="player-line-row">
         <img ng-src="{{player.imageUrl}}" class="face"
-             style="margin-left: {{(gameData[player.$id] / maxTaps)*100}}%;
+             style="margin-left: {{(gameData[player.$id] / tapCtrl.maxTaps)*100}}%;
                     transform: rotate({{gameData[player.$id]*60}}deg);
                     transition: all 0.5s;"/>
     </div>
