--- a/app/partials/start.html
+++ b/app/partials/start.html
@@ -19,7 +19,7 @@
       <div ng-show="code != null" data-ng-init="init()">
         <div class='gameCode'>{{code}}</div>
       </div>
-      <p>Install the <a href="http://go/cloud-cup-android">Cloud Cup</a> app on your Android phone and enter this game number.</p>
+      <p>Install the <a href="cloud-cup.apk">Cloud Cup</a> app on your Android phone and enter this game number.</p>
     </div>
   </div>
 
