--- a/app/partials/start.html
+++ b/app/partials/start.html
@@ -24,7 +24,7 @@
   </div>
 
 
-<div class="temp-buttons" style="display:none;">
+<div class="temp-buttons" style="display:block;">
   <button ng-click="start()" ng-show="players.length > 1">Start</button>
   <button ng-click="addDummyPlayers()">Add dummy players for testing</button>
 </div>
